Update image centos -> ubuntu

--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -3,7 +3,7 @@ workspace:
   name: "test-wac-0"
   type: "kubernetes"
   spec:
-    image: centos
+    image: ubuntu
     container-based-vm: false
     cpu: 1
     memory: 1.2
