--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -2,7 +2,7 @@ version: 0.0
 workspace:
   type: "kubernetes"
   spec:
-    image: alpine
+    image: centos
     container-based-vm: false
     cpu: 2
     memory: 1.5
