--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -20,7 +20,7 @@ workspace:
         command: touch test3.txt
         directory: /tmp/test1/test2
   devURLs:
-    - name: test-asdf
+    - name: testasdf
       port: 3000
       scheme: http
       access: private
