--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -20,11 +20,11 @@ workspace:
         command: touch test3.txt
         directory: /tmp/test1/test2
   devURLs:
-    - name: testqwertyasdf
+    - name: a 
       port: 3000
       scheme: http
       access: private
-    - name: testasdf
+    - name: b 
       port: 3001
       scheme: https
       access: private
